k8s/observability/opensearch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch
  namespace: observability
spec:
  serviceName: opensearch
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:2.11.0
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: opensearch-data
          mountPath: /usr/share/opensearch/data
  volumeClaimTemplates:
  - metadata:
      name: opensearch-data
    spec:
      storageClassName: standard
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: observability
spec:
  selector:
    app: opensearch
  ports:
  - port: 9200
    targetPort: 9200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch-dashboards
  template:
    metadata:
      labels:
        app: opensearch-dashboards
    spec:
      containers:
      - name: opensearch-dashboards
        image: opensearchproject/opensearch-dashboards:2.11.0
        ports:
        - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: observability
spec:
  selector:
    app: opensearch-dashboards
  ports:
  - port: 5601
    targetPort: 5601
  type: NodePort

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: opensearch-vs
  namespace: observability
spec:
  hosts:
    - "opensearch.lab.com.br"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: opensearch.observability.svc.cluster.local
            port:
              number: 9200

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: opensearch-dashboards-vs
  namespace: observability
spec:
  hosts:
    - "dashboards.lab.com.br"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: opensearch-dashboards.observability.svc.cluster.local
            port:
              number: 5601
